[gd_scene load_steps=5 format=3 uid="uid://cti0ll6gugcx6"]

[ext_resource type="Texture2D" uid="uid://dwbkhg0bue7h" path="res://assets/sprites/neutral-hex.png" id="1_8oknp"]
[ext_resource type="Texture2D" uid="uid://co82sern1q3tj" path="res://assets/sprites/red-hex.png" id="2_8oknp"]
[ext_resource type="Script" uid="uid://cnsraynaegaa6" path="res://scripts/hex_tile.gd" id="2_grtse"]
[ext_resource type="Texture2D" uid="uid://6whpcxiqf2nl" path="res://assets/sprites/blue-hex.png" id="3_grtse"]

[node name="Node2D" type="Node2D"]
script = ExtResource("2_grtse")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, -32, 31, -16, 31, 16, 0, 32, -31, 16, -31, -16)

[node name="RedHex" type="Sprite2D" parent="."]
texture = ExtResource("2_8oknp")

[node name="BlueHex" type="Sprite2D" parent="."]
texture = ExtResource("3_grtse")

[node name="NeutralHex" type="Sprite2D" parent="."]
texture = ExtResource("1_8oknp")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
